cms/deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  labels:
    app.kubernetes.io/instance: cms
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: cms
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: cms
    spec:
      containers:
      - name: cms
        image: cms:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 30m
            memory: 50Mi

...
