cms/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cms
spec:
  ports:
  - name: cms
    port: 80
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: cms

...
